# shopify-chatgpt-plugin

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
.well-known/: ai-plugin.json  openapi.yaml
local-server/: ai-plugin.json  openapi.yaml
models/: api.py  models.py  shopify_api.py
server/: main.py
services/: shopify.py
